Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1573,6 +1573,7 @@
     "unchecked": "Sense comprovar",
     "under-minimums": "Sota mínims",
     "undo": "Desfer",
+    "unit": "Unidad",
     "unit-profit": "Guany unit.",
     "unit-purchase-price": "Preu compra unit.",
     "unit-sale-price": "Preu venda unit.",
