--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1573,6 +1573,7 @@
     "unchecked": "Nicht überprüft",
     "under-minimums": "Unterhalb der Mindestgrenzen",
     "undo": "Rückgängig machen",
+    "unit": "Einheit",
     "unit-profit": "Einheitsgewinn",
     "unit-purchase-price": "Einzelhandelspreis",
     "unit-sale-price": "Einzelverkaufspreis",
