--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1573,6 +1573,7 @@
     "unchecked": "Unchecked",
     "under-minimums": "Under minimums",
     "undo": "Undo",
+    "unit": "Unit",
     "unit-profit": "Unit profit",
     "unit-purchase-price": "Unit purchase price",
     "unit-sale-price": "Unit sale price",
