--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1573,6 +1573,7 @@
     "unchecked": "Egiaztatu gabe",
     "under-minimums": "Minimoaren azpitik",
     "undo": "Desegin",
+    "unit": "Unitatea",
     "unit-profit": "Mozkin unitarioa",
     "unit-purchase-price": "Unitateko erosketa prezioa",
     "unit-sale-price": "Unitateko salmenta prezioa",
