--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1573,6 +1573,7 @@
     "unchecked": "Non vérifié",
     "under-minimums": "Sous les minima",
     "undo": "annuler",
+    "unit": "Unité",
     "unit-profit": "Bénéfice à l'unité",
     "unit-purchase-price": "Prix d'achat à l'unité",
     "unit-sale-price": "Prix de vente à l'unité",
