--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1573,6 +1573,7 @@
     "unchecked": "Non comprobado",
     "under-minimums": "Baixo mínimos",
     "undo": "Desfacer",
+    "unit": "Unidade",
     "unit-profit": "Beneficio unit.",
     "unit-purchase-price": "Prezo compra unit.",
     "unit-sale-price": "Prezo venta unit.",
