--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1573,6 +1573,7 @@
     "unchecked": "Non verificato",
     "under-minimums": "Sotto minimi",
     "undo": "Disfare",
+    "unit": "Unità",
     "unit-profit": "Profitto unit.",
     "unit-purchase-price": "Prezzo unitario di acquisto.",
     "unit-sale-price": "prezzo di vendita unitario",
