--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -127,7 +127,7 @@
     "attributes": "Atrybuty",
     "audio": "Audio",
     "august": "Agosto",
-    "auth-token-invalid": "Clave de API no válida",
+    "auth-token-invalid": "Klucz API jest nieprawidłowy",
     "authentication": "Uwierzytelnienie",
     "auto": "Auto",
     "auto-apply-to": "Automatycznie zastosuj do",
@@ -162,7 +162,7 @@
     "birthday": "Urodziny",
     "block-date": "Data blokady",
     "blocked": "Zablokowany",
-    "blocked-date": "Fecha de bloqueo",
+    "blocked-date": "Data blokady",
     "body": "Treść",
     "book": "Reservar",
     "box-closed-ok": "Kasa została prawidłowo zamknięta",
@@ -246,7 +246,7 @@
     "close-exercise": "Zakończć ćwiczenia",
     "closed": "Zamknięte",
     "closed-exercise": "Ćwiczenie %exerciseName% jest zamknięte.",
-    "closed-exercise-cant-change-date": "El ejercicio %exerciseName% está cerrado. No se puede modificar la fecha.",
+    "closed-exercise-cant-change-date": "Ćwiczenie %exerciseName% jest zamknięte. Nie można zmienić daty.",
     "closing-accounting-completed": "Rok obrachunkowy zakończony pomyślnie",
     "closing-closing-concept": "Zamknięcie roku %exercise%",
     "closing-opening-concept": "Wprowadzenie otwierające ćwiczenie %exercise%",
@@ -254,7 +254,7 @@
     "closing-regularization-concept": "Ewidencja regulacyjna roku %exercise%",
     "codbarras": "Kod kreskowy",
     "code": "Kod",
-    "codiso": "Código ISO",
+    "codiso": "Kod ISO",
     "color": "Kolor",
     "color-danger": "Kolor niebezpieczeństwa",
     "color-dark": "Kolor ciemny",
@@ -303,7 +303,7 @@
     "continue": "Kontynuować",
     "contract": "Umowa",
     "contracts": "Umowy",
-    "control-panel": "Panel de control",
+    "control-panel": "Panel sterowania",
     "control-panel-decimal-warning": "Ostrzeżenie: ta zmiana zostanie zastosowana do cen produktów, ale także do całkowitych kwot na fakturach, księgach, etc.",
     "controller": "Kontroler",
     "controller-error": "Błąd kontrolera",
@@ -388,7 +388,7 @@
     "dateentry-wildcard-info": "Data wskazana w nagłówku wpisu księgowego",
     "day": "Dzień",
     "days": "Dni",
-    "days-log-retention": "Liczba dni retencji logów",
+    "days-log-retention": "Liczba dni przechowywania logów",
     "days-until-expiration": "Dni do wygaśnięcia",
     "db-host": "Host bazy danych",
     "db-name": "Nazwa bazy danych",
@@ -414,13 +414,13 @@
     "delete-all": "Usuń wszystko",
     "delete-closing": "Eliminar asientos de cierre",
     "delete-data": "Usuń dane",
-    "delete-file": "Eliminar archivo",
+    "delete-file": "Usuń plik",
     "delete-logs": "Usuń historię",
     "delete-opening": "Usuń otwarcie",
     "delete-record": "Usuń wpis",
     "Deleted": "Usunięto",
     "deleted-model": "Usunięty %model% (%key%) %desc%",
-    "delivery-note": "Albarán",
+    "delivery-note": "Albaran",
     "delivery-note-email-subject": "Państwa dowód dostawy %code%",
     "delivery-note-email-text": "Buenos días, le adjunto su albarán %code%",
     "delivery-notes": "Albaranes",
@@ -454,7 +454,7 @@
     "details": "Detalles",
     "difference": "Różnica",
     "different-passwords": "Hasła nie pasują dla użytkownika %userNick%",
-    "different-than": "Diferente que",
+    "different-than": "Różny niż",
     "disable": "Deaktywować",
     "disable-plugins": "Wyłącz wtyczki",
     "disabled": "Wyłączone",
@@ -497,7 +497,7 @@
     "duplicated-reference": "Zduplikowana referencja: '%reference%'",
     "duplicated-request": "Petición duplicada",
     "duration": "Czas trwania",
-    "edit": "Editar",
+    "edit": "Edytuj",
     "editable": "Edytowalny",
     "email": "E-mail",
     "email-bcc": "Email z kopią ukrytą",
@@ -508,7 +508,7 @@
     "email-notification-disabled": "Powiadomienie e-mail %name% jest wyłączone",
     "email-notification-not-exists": "Nie znaleziono powiadomienia e-mail %name%",
     "email-replies": "Odpowiedzi e-mail",
-    "email-replies-to": "Las respuestas a este email irán a %email%",
+    "email-replies-to": "Odpowiedzi na ten e-mail będą wysyłane na %email%",
     "email-sent": "Email wysłany",
     "email-sent-to": "Email wysłany do %email%",
     "email-signature": "Podpis e-mail",
@@ -679,7 +679,7 @@
     "generated-contacts": "%quantity% contactos generados.",
     "generated-customer-delivery-notes": "Wygenerowano %quantity% faktur sprzedaży.",
     "generated-customer-estimations": "Wygenerowano %quantity% oszacowań klientów.",
-    "generated-customer-groups": "%quantity% grupos de clientes generados.",
+    "generated-customer-groups": "Wygenerowano %quantity% grup klientów.",
     "generated-customer-orders": "Wygenerowano %quantity% zamówień od klientów.",
     "generated-customers": "%quantity% wygenerowanych klientów.",
     "generated-families": "%quantity% wygenerowanych rodzin.",
@@ -796,7 +796,7 @@
     "invoice-without-acc-entry": "Faktura bez wpisu",
     "invoiced": "Fakturowane",
     "invoices": "Facturas",
-    "invoices-cant-generate-new-docs": "Las facturas no pueden generar nuevos documentos",
+    "invoices-cant-generate-new-docs": "Faktury nie mogą generować nowych dokumentów",
     "ip": "IP",
     "ip-banned": "Z powodów bezpieczeństwa dostęp z Twojego IP został tymczasowo zablokowany.",
     "irpf": "IRPF",
@@ -892,7 +892,7 @@
     "lock-unlock": "(Des)Bloquear",
     "lock-unlock-account-entry": "Blokować\/Odblokować zapis księgowy",
     "locked": "Zablokowany",
-    "log": "Log",
+    "log": "Dziennik",
     "login": "Zaloguj się",
     "login-cookie-fail": "Nieprawidłowy ciasteczko logowania",
     "login-image": "Imagen de login",
@@ -912,7 +912,7 @@
     "look-for-gaps": "Szukaj luk",
     "lot": "Lote",
     "low-security": "Baja seguridad",
-    "machine": "Máquina",
+    "machine": "Maszyna",
     "machines": "Maszyny",
     "macro-account-note-info": "Kody do zamiany na wartości",
     "mail-server-error": "Błąd połączenia z serwerem pocztowym",
@@ -951,7 +951,7 @@
     "messages-component-title": "Komunikaty i wiadomości",
     "meta-description": "FacturaScripts to oprogramowanie do fakturowania i księgowości dla małych i średnich przedsiębiorstw. Jest to oprogramowanie wolne na licencji GNU\/LGPL.",
     "method-payment": "Metoda płatności",
-    "mime-type": "Mime Type",
+    "mime-type": "Typ MIME",
     "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
     "minimum-amount-without-cifnif": "Minimalna kwota bez CIF\/NIF",
     "minimum-stock": "Minimalny zapas",
@@ -1018,7 +1018,7 @@
     "no-extra-lines": "Nie dodawaj dodatkowych linii",
     "no-gaps-found": "Nie znaleziono luk",
     "no-invoice": "Brak faktury",
-    "no-outstanding-amount": "No hay importe pendiente",
+    "no-outstanding-amount": "Nie ma zaległej kwoty",
     "no-print-permission": "Nie masz uprawnień do drukowania lub eksportowania",
     "no-reference": "Brak odniesienia",
     "no-selected-item": "Nie wybrano żadnego elementu",
@@ -1058,18 +1058,18 @@
     "only-active": "Tylko aktywne",
     "only-charged": "Sólo pagados",
     "only-closed": "Tylko zamknięte",
-    "only-insert": "Sólo añadir",
+    "only-insert": "Tylko dodaj",
     "only-owner-data": "Wyświetl tylko rekordy właściciela",
     "only-pending": "Tylko oczekujące",
     "only-suspended": "Solamente suspendidos",
     "open": "Otwórz",
-    "open-exercise": "Abrir ejercicio",
+    "open-exercise": "Otwórz ćwiczenie",
     "open-tab": "Otwórz w nowej karcie",
     "opened": "Abierto",
     "opening-acounting-completed": "Prawidłowe otwarcie ćwiczenia",
     "opening-operation": "Otwarcie",
     "operation": "Operación",
-    "operator": "Operador",
+    "operator": "Operator",
     "option": "Opcja",
     "optional": "opcjonalny",
     "options": "Opcje",
@@ -1208,7 +1208,7 @@
     "profits": "Zyski",
     "project": "Projekt",
     "projects": "Projekty",
-    "provider-reference": "Referéncia de proveedor",
+    "provider-reference": "Referencja dostawcy",
     "province": "Provincia",
     "provinces": "Prowincje",
     "public": "Publiczne",
@@ -1246,7 +1246,7 @@
     "record-deleted-error": "Błąd podczas usuwania rekordu",
     "record-not-found": "Nie znaleziono rekordu",
     "record-save-error": "Wystąpił błąd podczas zapisywania danych",
-    "record-updated-correctly": "Registro actualizado correctamente.",
+    "record-updated-correctly": "Rekord zaktualizowany poprawnie.",
     "recreate-system-integrity": "Odtwórz integralność systemu",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "Faktury to dokumenty handlowe i podlegają pewnym ograniczeniom prawny. Nie mogą zostać usunięte ani zmodyfikowane. Dozwolone są jedynie zwroty pełne lub częściowe. Skorzystaj z tego formularza, aby dokonać zwrotu tej faktury.",
@@ -1275,7 +1275,7 @@
     "related": "Powiązane",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
     "related-subaccount-purchases-sales": "Powiązana subkonta do zakupów i sprzedaży",
-    "reloading": "Recargando...",
+    "reloading": "Ładowanie...",
     "remove-filter": "Usuń filtr",
     "remove-from-list": "Quitar",
     "removing-logs-until": "Usuwanie logów do %date%",
@@ -1487,10 +1487,10 @@
     "swift": "SWIFT\/BIC",
     "symbol": "Symbol",
     "table": "Tabela",
-    "table-checked": "Tabla %tableName% comprobada.",
+    "table-checked": "Tabela %tableName% została sprawdzona.",
     "table-not-found": "Tabela %tableName% nie znaleziona!",
     "table-size": "Tamaño de la tabla",
-    "tables": "Tablas",
+    "tables": "Tabele",
     "task": "Zadanie",
     "tasks": "Zadania",
     "tasks-completed-title": "Zadania ukończone",
@@ -1522,7 +1522,7 @@
     "this-last-week": "Ostatnie 7 dni",
     "this-last-year": "Ostatnie 365 dni",
     "this-month": "W tym miesiącu",
-    "this-week": "Esta semana",
+    "this-week": "W tym tygodniu",
     "this-year": "Ten rok",
     "thousands-separator": "Separator tysięcy",
     "thursday": "Czwartek",
@@ -1573,6 +1573,7 @@
     "unchecked": "Niezweryfikowany",
     "under-minimums": "Bajo mínimos",
     "undo": "Cofnij",
+    "unit": "Jednostka",
     "unit-profit": "Beneficio unit.",
     "unit-purchase-price": "Cena zakupu jednostkowa",
     "unit-sale-price": "Cena sprzedaży jednostkowej",
@@ -1612,7 +1613,7 @@
     "value": "Wartość",
     "value-x": "Wartość X",
     "value-y": "Wartość Y",
-    "values": "Valores",
+    "values": "Wartości",
     "variables": "Variables",
     "variant": "Wariant",
     "variants": "Variantes",
@@ -1663,7 +1664,7 @@
     "works": "Prace",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Kolumna X",
-    "x-operation": "Operación sobre X",
+    "x-operation": "Operacja na X",
     "y-column": "Kolumna Y",
     "year": "Rok",
     "year-wildcard-info": "Bieżący rok (na podstawie daty bieżącej)",
