--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -81,7 +81,7 @@
     "allow-delete-data": "Permitir DELETE",
     "allow-export": "Permitir exportar",
     "allow-get-data": "Permitir GET",
-    "allow-import": "Permitir importar",
+    "allow-import": "Permitir a importação",
     "allow-marketing": "permitir-marketing",
     "allow-post-data": "Permitir POST",
     "allow-put-data": "Permitir ADICIONAR",
@@ -385,7 +385,7 @@
     "date-out": "Data de saída",
     "date-out-of-exercise-range": "A data está fora do intervalo do exercício %exerciseName%",
     "date-wildcard-info": "Data atual (data do computador)",
-    "dateentry-wildcard-info": "dateentry-wildcard-info",
+    "dateentry-wildcard-info": "Data indicada no cabeçalho do lançamento contábil",
     "day": "Dia",
     "days": "dias",
     "days-log-retention": "Nº dias retenção logs",
@@ -588,7 +588,7 @@
     "expedient": "Expediente",
     "expense-subaccount": "Subconta para despesas bancárias",
     "expenses": "Despesas",
-    "expiration": "Expiração",
+    "expiration": "Vencimento",
     "expiration-type": "Tipo de vencimento",
     "expired": "expirado",
     "expired-receipt": "R",
@@ -1573,6 +1573,7 @@
     "unchecked": "Sem checar",
     "under-minimums": "Abaixo do mínimo",
     "undo": "Desfazer",
+    "unit": "Unidade",
     "unit-profit": "lucro unitário",
     "unit-purchase-price": "Preço de compra por unidade",
     "unit-sale-price": "Preço de venda unit.",
