--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -258,7 +258,7 @@
     "color": "Cor",
     "color-danger": "Cor perigo",
     "color-dark": "Cor da escuridão",
-    "color-info": "Color info",
+    "color-info": "Cor info",
     "color-light": "Cor da luz",
     "color-primary": "Color primário",
     "color-secondary": "Cor secundária",
@@ -385,7 +385,7 @@
     "date-out": "Date out",
     "date-out-of-exercise-range": "Data da faixa de excervise 0",
     "date-wildcard-info": "Data atual (data do computador)",
-    "dateentry-wildcard-info": "dateentry-wildcard-info",
+    "dateentry-wildcard-info": "Data indicada no cabeçalho do lançamento contábil",
     "day": "day",
     "days": "dias",
     "days-log-retention": "Nº dias de retenção de logs",
@@ -586,7 +586,7 @@
     "exercises": "Exercícios",
     "exit": "Sair",
     "expedient": "Expediente",
-    "expense-subaccount": "expense-subaccount",
+    "expense-subaccount": "Subconta para despesas bancárias",
     "expenses": "Despesas",
     "expiration": "Expiração",
     "expiration-type": "Tipo de vencimento",
@@ -669,7 +669,7 @@
     "generate-doc-type": "Gerar tipo de documento",
     "generate-invoice": "Criar fatura",
     "generate-receipts": "Gerar recibos",
-    "generate-settlements": "generate-settlements",
+    "generate-settlements": "Gerar liquidações",
     "generate-test-data": "Gerar dados de teste",
     "generate-title": "Criar Relatório",
     "generated-accounting-entries": "0 entradas contábeis geradas.",
@@ -699,7 +699,7 @@
     "group-accounts": "Agrupar contas",
     "group-by-day": "Agrupar por dia",
     "group-by-day-unixtime": "Agrupar por dia - unixtime",
-    "group-by-month": "group-by-month",
+    "group-by-month": "Agrupar por mês",
     "group-by-month-unixtime": "Agrupar por mês (unixtime)",
     "group-by-subaccount": "Agrupar por subconta",
     "group-by-week": "Agrupar por semana",
@@ -1056,7 +1056,7 @@
     "october": "Outubro",
     "offsetting-account": "Conta de contrapartida",
     "only-active": "Apenas ativos",
-    "only-charged": "only-charged",
+    "only-charged": "Apenas pagos",
     "only-closed": "Apenas fechado",
     "only-insert": "Somente adicionar",
     "only-owner-data": "Mostrar apenas os registos do usuário",
@@ -1107,7 +1107,7 @@
     "passenger": "Passageiro",
     "password": "Senha",
     "pattern": "Padrão",
-    "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
+    "pattern-without-number": "O padrão escolhido não inclui número, pelo que é muito provável que gere códigos duplicados.",
     "pattern-without-serie": "O padrão escolhido não inclui série, o que pode gerar códigos duplicados para cada série",
     "pattern-without-year": "O padrão escolhido não inclui exercício ou data, pelo que pode gerar códigos duplicados em cada exercício",
     "pay": "Pagar",
@@ -1268,7 +1268,7 @@
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
     "registered-installation": "r",
-    "registered-installation-p": "registered-installation-p",
+    "registered-installation-p": "Esta instalação já foi registrada. Se tiver plugins pagos, clique no botão administrar para vinculá-los e poder atualizar.",
     "regularization-operation": "Operação de regularização",
     "reject": "Rejeitar",
     "rejected": "rejeitado",
@@ -1288,7 +1288,7 @@
     "renumber-invoices-p": "Renumerar as faturas com base na data, da mais antiga para a mais recente",
     "renumber-invoices-success": "As faturas do exercício '%exercise%' foram renumeradas com sucesso",
     "repeat-new-password": "Repita a senha",
-    "repeat-password": "Repetir contraseña",
+    "repeat-password": "Repetir senha",
     "reply": "Resposta",
     "report": "Relatório",
     "report-grouping-account": "Agrupar por contas",
@@ -1371,7 +1371,7 @@
     "settings": "Configurações",
     "settlement": "Liquidação",
     "settlement-product": "Produto de liquidação",
-    "settlements": "settlements",
+    "settlements": "Liquidações",
     "setup-options": "Opções de configuração",
     "shipping": "Envio",
     "shipping-address": "Endereço de entrega",
@@ -1573,6 +1573,7 @@
     "unchecked": "Sem checar",
     "under-minimums": "Abaixo dos mínimos",
     "undo": "Desfazer",
+    "unit": "Unidade",
     "unit-profit": "Lucro unitário",
     "unit-purchase-price": "Preço de compra unitário",
     "unit-sale-price": "Preço de venda unit.",
