--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1573,6 +1573,7 @@
     "unchecked": "Sense comprovar",
     "under-minimums": "under-minimums",
     "undo": "Desfés",
+    "unit": "Unitat",
     "unit-profit": "unit-profit",
     "unit-purchase-price": "unit-purchase-price",
     "unit-sale-price": "unit-sale-price",
