--- a/Core/Translation/es_PA.json
+++ b/Core/Translation/es_PA.json
@@ -1573,6 +1573,7 @@
     "unchecked": "No comprobado",
     "under-minimums": "Bajo mínimos",
     "undo": "Deshacer",
+    "unit": "Unidad",
     "unit-profit": "Beneficio unit.",
     "unit-purchase-price": "Precio compra unit.",
     "unit-sale-price": "Precio venta unit.",
