Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -87,7 +87,7 @@
     "allow-put-data": "Zezwól na DODAWANIE",
     "allow-sale-without-stock": "Permitir venta sin stock",
     "allow-sale-without-stock-n": "Zezwól na sprzedaż bez zapasów w nowych produktach",
-    "allow-update": "Permitir modificar",
+    "allow-update": "Zezwól na modyfikację",
     "always-to-company-email": "Zawsze na email firmy",
     "amount": "Kwota",
     "amount-without-discount": "Cena bez zniżki",
@@ -168,7 +168,7 @@
     "box-closed-ok": "Kasa została prawidłowo zamknięta",
     "boxes": "Cajas",
     "browse": "Examinar",
-    "business-name": "Razón Social",
+    "business-name": "Nazwa firmy",
     "buy": "Kupować",
     "cache": "Caché",
     "cache-dir": "Folder pamięci podręcznej '%folderName%'",
@@ -210,7 +210,7 @@
     "cant-remove-receipt": "Nie można usunąć rachunku",
     "cant-update-audit-log": "No se puede modificar un registro de auditoria",
     "card": "Karta",
-    "carrier": "Transportista",
+    "carrier": "Przewoźnik",
     "carriers": "Przewoźnicy",
     "cash": "Efectivo",
     "categories": "Categorias",
@@ -402,13 +402,13 @@
     "december": "Diciembre",
     "decimal-separator": "Separador de decimales",
     "decimals": "Decimales",
-    "default": "Por defecto",
+    "default": "Domyślnie",
     "default-customer": "Klient domyślny",
     "default-retention": "Domyślne zatrzymanie",
     "default-role": "Domyślna grupa użytkowników",
     "default-tax": "Domyślny podatek",
     "default-to-company-email": "Domyślnie na e-mail firmy",
-    "default-to-user-email": "Por defecto al email del usuario",
+    "default-to-user-email": "Domyślnie na email użytkownika",
     "default-warehouse": "Domyślny magazyn",
     "delete": "Eliminar",
     "delete-all": "Usuń wszystko",
@@ -423,7 +423,7 @@
     "delivery-note": "Albaran",
     "delivery-note-email-subject": "Państwa dowód dostawy %code%",
     "delivery-note-email-text": "Buenos días, le adjunto su albarán %code%",
-    "delivery-notes": "Albaranes",
+    "delivery-notes": "Faktury dostawy",
     "delivery-notes-button": "Faktury realizowane:",
     "department": "Dział",
     "departments": "Działy",
@@ -495,7 +495,7 @@
     "dto-2": "Dto. 2",
     "duplicate-record": "Duplikat rekordu",
     "duplicated-reference": "Zduplikowana referencja: '%reference%'",
-    "duplicated-request": "Petición duplicada",
+    "duplicated-request": "Duplikat żądania",
     "duration": "Czas trwania",
     "edit": "Edytuj",
     "editable": "Edytowalny",
@@ -617,7 +617,7 @@
     "filecache-delete-key-item": "Eliminado elemento '%item%' de Filecache.",
     "filecache-get-key-item": "Pobrany element '%item%' z Filecache.",
     "filecache-set-key-item": "Przypisany element '%item%' do Filecache.",
-    "files": "Archivos",
+    "files": "Pliki",
     "filter-method": "Metoda filtracji",
     "filter-records-containing-indicated-value": "Filtruj rekordy zawierające wartość",
     "filters": "Filtry",
@@ -710,7 +710,7 @@
     "group-name": "Nombre del Grupo",
     "group-or-split": "Agrupar o partir",
     "group-or-split-p": "Ten kreator pozwala generować nowy dokument na podstawie linii innych dokumentów. Wybierz ilości, które chcesz użyć, datę nowego dokumentu i naciśnij przycisk generuj.",
-    "grouping-type": "Agrupación",
+    "grouping-type": "Grupowanie",
     "groups": "Grupy",
     "has-attachments": "Ma załączniki",
     "has-parent": "Ma rodzica",
@@ -795,7 +795,7 @@
     "invoice-regularized-cant-delete": "Faktura jest w trakcie regulacji %tax% Nie można jej usunąć.",
     "invoice-without-acc-entry": "Faktura bez wpisu",
     "invoiced": "Fakturowane",
-    "invoices": "Facturas",
+    "invoices": "Faktury",
     "invoices-cant-generate-new-docs": "Faktury nie mogą generować nowych dokumentów",
     "ip": "IP",
     "ip-banned": "Z powodów bezpieczeństwa dostęp z Twojego IP został tymczasowo zablokowany.",
@@ -875,7 +875,7 @@
     "level2": "Poziom 2",
     "level3": "Poziom 3",
     "level4": "Poziom 4",
-    "liabilities": "Pasivo",
+    "liabilities": "Zobowiązania",
     "library": "Biblioteka",
     "license": "Licencja",
     "like-than": "Igual que",
@@ -907,7 +907,7 @@
     "logout-ok": "Sesja została pomyślnie zakończona.",
     "logs": "Dzienniki",
     "long": "Długi",
-    "longitude": "Longitud",
+    "longitude": "Długość",
     "longitude-abb": "Long",
     "look-for-gaps": "Szukaj luk",
     "lot": "Lote",
@@ -952,7 +952,7 @@
     "meta-description": "FacturaScripts to oprogramowanie do fakturowania i księgowości dla małych i średnich przedsiębiorstw. Jest to oprogramowanie wolne na licencji GNU\/LGPL.",
     "method-payment": "Metoda płatności",
     "mime-type": "Typ MIME",
-    "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
+    "minimum-amount-with-cifnif": "Minimalna kwota z CIF\/NIF",
     "minimum-amount-without-cifnif": "Minimalna kwota bez CIF\/NIF",
     "minimum-stock": "Minimalny zapas",
     "minutes": "Minuty",
@@ -981,7 +981,7 @@
     "month-9": "Septiembre",
     "month-name": "Nombre del Mes",
     "month-wildcard-info": "Aktualny miesiąc (z obecnej daty)",
-    "monthly": "Mensual",
+    "monthly": "Miesięczny",
     "monthly-payment": "Pago mensual",
     "months": "Miesiące",
     "more": "Más",
@@ -1030,12 +1030,12 @@
     "normal": "Normalny",
     "not-allowed-delete": "Nie masz uprawnień do usunięcia",
     "not-allowed-modify": "Nie masz uprawnień do modyfikacji",
-    "not-enough-stock": "No hay suficiente stock de %reference%",
+    "not-enough-stock": "Nie ma wystarczającej ilości zapasów %reference%",
     "not-passed-integrity-check": "Niektóre pliki nie przeszły weryfikacji integralności ... <br\/>Możesz <a class='alert-link' target='_blank' href='IntegritySystemCheck'>uzyskać więcej szczegółów tutaj<\/a>.",
     "not-public": "Niepubliczny",
     "not-stored-content": "Zawartość nieprzechowana",
     "not-valid-email": "Email %email% jest nieprawidłowy",
-    "not-valid-fiscal-number": "El %type% %number% no es válido",
+    "not-valid-fiscal-number": "%type% %number% jest nieprawidłowy",
     "not-valid-image": "To nie jest prawidłowy obraz",
     "not-valid-percentage-retention": "Nieprawidłowy procent. Musi być większy niż 0.00",
     "note": "Nota",
@@ -1056,7 +1056,7 @@
     "october": "Octubre",
     "offsetting-account": "Konto do kompensacji",
     "only-active": "Tylko aktywne",
-    "only-charged": "Sólo pagados",
+    "only-charged": "Tylko opłacone",
     "only-closed": "Tylko zamknięte",
     "only-insert": "Tylko dodaj",
     "only-owner-data": "Wyświetl tylko rekordy właściciela",
@@ -1082,7 +1082,7 @@
     "origin-warehouse": "Magazyn źródłowy",
     "original": "Oryginał",
     "original-file": "Plik oryginalny",
-    "other-data": "Otros datos",
+    "other-data": "Inne dane",
     "others-filters": "Inne filtry",
     "out-of-stock": "Brak towaru",
     "page": "Página",
@@ -1165,7 +1165,7 @@
     "plugins": "Plugins",
     "plugins-p": "Wtyczki umożliwiają dodawanie nowych funkcji. Aktywuj te, które potrzebujesz teraz, lub zrób to, gdy chcesz z menu administratora.",
     "points": "Punkty",
-    "points-of-interest": "Punkty zainteresowań",
+    "points-of-interest": "Punkty zainteresowania",
     "port": "Port",
     "position": "Cargo",
     "positive-balance": "Dodatnie saldo",
@@ -1182,7 +1182,7 @@
     "previously-purchased-from-supplier": "Zakupione wcześniej od dostawcy",
     "previously-sold-to-customer": "Sprzedano wcześniej klientowi",
     "price": "Cena",
-    "price-with-tax": "Precio + impuestos",
+    "price-with-tax": "Cena + podatki",
     "principal": "Główny",
     "print": "Drukuj",
     "print-bank-data": "Imprimir cuenta bancaria",
@@ -1222,10 +1222,10 @@
     "pvp-unit": "Jednostkowa cena detaliczna",
     "pvpsindto-line-error": "Error en el valor de 'pvpsindto' de la línea %reference% del documento. Valor correcto: %totalWithoutDiscount%",
     "pvptotal-line-error": "Błąd w wartości 'pvptotal' linii %reference% dokumentu. Prawidłowa wartość: %total%",
-    "quantity": "Cantidad",
+    "quantity": "Ilość",
     "quantity-abb": "Ilość",
     "quantity-remaining": "Cantidad restante",
-    "quantity-served": "Cant. servida",
+    "quantity-served": "Ilość wydana",
     "quantity-sold": "Cant. vendida",
     "randomizer-generating-more-items": "Generowanie dodatkowych elementów...",
     "rate": "Stawka",
@@ -1252,7 +1252,7 @@
     "rectified-invoice-p": "Faktury to dokumenty handlowe i podlegają pewnym ograniczeniom prawny. Nie mogą zostać usunięte ani zmodyfikowane. Dozwolone są jedynie zwroty pełne lub częściowe. Skorzystaj z tego formularza, aby dokonać zwrotu tej faktury.",
     "rectified-invoices": "Faktury korygujące",
     "rectifying": "Korekta",
-    "rectifying-serie": "Serie rectificativa",
+    "rectifying-serie": "Seria korygująca",
     "redirect": "Przekierowanie",
     "reference": "Referencja",
     "reference+description": "Referencja + Opis",
@@ -1377,7 +1377,7 @@
     "shipping-address": "Adres dostawy",
     "shop": "Sklep",
     "shops": "Sklepy",
-    "short": "Corto",
+    "short": "Krótki",
     "short-name": "Krótka nazwa",
     "show": "Pokaż",
     "show-balance-graphic": "Mostrar gráficos en asientos",
@@ -1469,7 +1469,7 @@
     "supplier-estimations": "Kosztorysy dostawców",
     "supplier-have-no-iban": "Dostawca %%supplier nie posiada IBAN (numer konta bankowego)",
     "supplier-invoice": "Factura de Proveedor",
-    "supplier-invoice-deleted-successfully": "Factura de compra %docCode% ha sido eliminada correctamente.",
+    "supplier-invoice-deleted-successfully": "Faktura zakupu %docCode% została pomyślnie usunięta.",
     "supplier-invoices": "Faktury dostawców",
     "supplier-not-found": "Dostawca nie znaleziony",
     "supplier-order": "Zamówienie od dostawcy",
@@ -1500,7 +1500,7 @@
     "tax-area": "Obszar podatkowy",
     "tax-areas": "Obszary podatkowe",
     "tax-base": "Podstawa opodatkowania",
-    "tax-credit-account": "Cuenta de crédito para impuestos",
+    "tax-credit-account": "Konto kredytowe do podatków",
     "tax-debit-account": "Konto debetowe do podatków",
     "tax-transport": "Podatki od transportu",
     "taxes": "Podatki",
@@ -1508,12 +1508,12 @@
     "telephone-prefix": "Prefiks telefoniczny",
     "template": "Szablon",
     "template-error": "Błąd szablonu",
-    "template-not-found": "Plantilla no encontrada",
+    "template-not-found": "Szablon nie znaleziony",
     "templates": "Plantillas",
     "test": "Test",
     "test-mail-not-implemented": "Test kontrolera poczty Mail nie został zaimplementowany",
     "test-sendmail-not-implemented": "Test sterownika poczty sendmail nie jest zaimplementowany",
-    "text-color": "Color de texto",
+    "text-color": "Kolor tekstu",
     "texts": "Teksty",
     "third-quarter": "3. kwartał",
     "third-trimester": "Trzeci kwartał",
@@ -1568,7 +1568,7 @@
     "type-notice": "Typ powiadomienia",
     "type-success": "Typ poprawny",
     "type-warning": "Tipo advertencia",
-    "unbalance": "Descuadre",
+    "unbalance": "Nierównowaga",
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Niezweryfikowany",
     "under-minimums": "Bajo mínimos",
@@ -1605,7 +1605,7 @@
     "users": "Usuarios",
     "using-apc": "Używając pamięci podręcznej APC",
     "using-filecache": "Używając pamięci podręcznej plików",
-    "using-memcache": "Usando Memcache",
+    "using-memcache": "Używając Memcache",
     "valid-for-day": "Válido para un día",
     "validate": "Zatwierdź",
     "validate-iban": "Waliduj IBAN",
@@ -1619,7 +1619,7 @@
     "variants": "Variantes",
     "vat": "VAT",
     "vat-document": "Dokument",
-    "vat-exception": "Excepción de IVA",
+    "vat-exception": "Wyjątek VAT",
     "vat-number-is-short": "Numer '%vat-number%' jest zbyt krótki",
     "vat-number-not-vies": "Numer '%vat-number%' nie jest zarejestrowany w systemie VIES",
     "vat-regime": "Régimen impuestos",
@@ -1631,7 +1631,7 @@
     "video": "Video",
     "vies-check-success": "Numer '%vat-number%' jest zarejestrowany w systemie VIES",
     "view-api": "Zobacz API",
-    "view-column-net-subtotal": "Ver columna subtotal o neto",
+    "view-column-net-subtotal": "Zobacz kolumnę subtotal lub netto",
     "view-estimation": "Zobacz kosztorys",
     "view-order": "Zobacz zamówienie",
     "warehouse": "Almacén",
@@ -1650,15 +1650,15 @@
     "wildcard": "Comodín",
     "wildcard-general-info": "Zostanie zastąpiony odpowiednią wartością",
     "wildcard-title": "Zmienna zastępująca wartość",
-    "without-closure": "Sin el cierre",
+    "without-closure": "Bez zamknięcia",
     "without-domicile": "Bez zlecenia",
     "without-groups": "Bez grup",
-    "without-regularization": "Sin regularización",
+    "without-regularization": "Bez regulacji",
     "without-tax": "Bez VAT",
     "without-taxation": "Bez opodatkowania",
     "wizard": "Asystent",
     "wizard-p": "Wypełnij ten formularz dotyczący swojej firmy, aby zakończyć konfigurację.",
-    "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
+    "wizard-plugins": "Wtyczka to dodatek, który dodaje nowe funkcjonalności. Wybierz wtyczki, które chcesz aktywować od razu, lub zrób to później z panelu sterowania.",
     "work-events": "Wydarzenia pracy",
     "working-hours": "Horario de trabajo",
     "works": "Prace",
