--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -220,7 +220,7 @@
     "change": "mudança",
     "channel": "Canal",
     "charge-date": "Data de cobrança",
-    "chart": "Chart",
+    "chart": "Gráfico",
     "charts": "gráficos",
     "chat": "Chat",
     "check-table": "Erro ao verificar a tabela '0'",
@@ -263,7 +263,7 @@
     "color-primary": "Color primário",
     "color-secondary": "Cor secundária",
     "color-success": "Color éxito",
-    "color-warning": "Color advertencia",
+    "color-warning": "Cor da advertência",
     "colors": "Cores",
     "column": "Coluna",
     "columns": "Colunas",
@@ -367,7 +367,7 @@
     "customers": "clientes",
     "customize": "Personalizar",
     "daily": "Diário",
-    "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
+    "dasboard-backup-li1": "Se você excluir ou desinstalar o FacturaScripts, perderá os dados.",
     "dasboard-backup-li2": "Se excluir ou desinstalar o XAMPP, perderá os dados.",
     "dasboard-backup-li3": "S",
     "dashboard": "Painel de controle",
@@ -890,7 +890,7 @@
     "lock-entry": "Bloquear lançamento",
     "lock-invoice": "Bloquear fatura",
     "lock-unlock": "Bloquear-Desbloquear",
-    "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
+    "lock-unlock-account-entry": "Bloquear\/Desbloquear a entrada contábil",
     "locked": "Bloqueado",
     "log": "Log",
     "login": "Entrar",
@@ -1020,7 +1020,7 @@
     "no-invoice": "Sem fatura",
     "no-outstanding-amount": "Não há valor pendente",
     "no-print-permission": "Não tem permissão para imprimir ou exportar",
-    "no-reference": "Sin referencia",
+    "no-reference": "Sem referência",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem stock",
     "non-editable-accounting-entry": "Asiento contábil não editável",
@@ -1255,7 +1255,7 @@
     "rectifying-serie": "Série retificativa",
     "redirect": "Redirecionamento",
     "reference": "Referência",
-    "reference+description": "Reference + Description",
+    "reference+description": "Referência + Descrição",
     "refresh": "Atualizar",
     "refresh-page": "Atualizar a página",
     "refund-amount": "Quantidade devolvida",
