--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1263,7 +1263,7 @@
     "refunds": "Itzulketak",
     "register": "Erregistratu",
     "register-install-ad": "Erregistratu FacturaScripts instalazioa",
-    "register-install-ad-p": "FacturaScripts-en instalazioa erregistratzen baduzu, 1 hilabete PRO babesa izango duzu, gure plugin esklusiboetako bat deskargatzeko. Gainera, core-eko eta PHP-ren bertsioen estatistikak lortzen laguntzen du.",
+    "register-install-ad-p": "FacturaScripts-en instalazioa izena ematen baduzu, 1 hilabete PRO babesa izango duzu, gure plugin esklusiboetako bat deskargatzeko. Gainera, core-eko eta PHP-ren bertsioen estatistikak lortzen laguntzen du.",
     "register-installation": "Instalazioa erregistratu",
     "register-installation-p": "Zure instalazioa erregistratu ordainpeko edo pribatuak diren pluginak eguneratu ahal izateko.",
     "register-symbol": "#",
